# dial_langchain_rag

./: common.yml  docker-compose.yml  pyproject.toml
book_assistant/: Dockerfile  app.py  books.py  data.json  langserve.py  llm.py  requirements.txt  retriever.py  tools.py  vector_store.py
core/: config.json
settings/: settings.json
